[package]
name = "hacker-ostree"
version = "0.3.0"
edition = "2021"
description = "Custom package manager for atomic systems with APT overlay"
authors = ["HackerOS Team <hackerso068@gmail.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.13"
